<resources>
    <string name="action_about">About</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist…</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_clear_playlist">Clear playlist</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_grant">Grant</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="action_new_playlist">New playlist…</string>
    <string name="action_next">Next</string>
    <string name="action_pause_finished">Pause on Current Song End</string>
    <string name="action_play">Play</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_rename">Rename</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_scan">Scan</string>
    <string name="action_scan_directory">Scan directory</string>
    <string name="action_search">Search</string>
    <string name="action_set">Set</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_share">Share</string>
    <string name="action_shuffle_album">Shuffle album</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_artist">Shuffle artist</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_sort_order">Sort order</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="add_action">Add</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="added_title_to_playing_queue">"Added 1 title to the playing queue."</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d titles to the playing queue.</string>
    <string name="adrien_poupa_summary">Original author of Vinyl.</string>
    <string name="aidan_follestad_summary">For the theme engine and some other great stuff.</string>
    <string name="album">Album</string>
    <string name="album_artist_multiple">Album Artists (one per line)</string>
    <string name="album_or_artist_empty">The title or artist is empty.</string>
    <string name="albums">Albums</string>
    <string name="always">Always</string>
    <string name="app_icon_url">APP ICON</string>
    <string name="app_shortcut_last_added_short">Last added</string>
    <string name="app_shortcut_shuffle_all_short">Shuffle</string>
    <string name="app_shortcut_top_tracks_short">Top tracks</string>
    <string name="app_widget_big_name">Cassette  - Big</string>
    <string name="app_widget_classic_name">Cassette - Classic</string>
    <string name="app_widget_full_name">Cassette - Full</string>
    <string name="app_widget_mini_name">Cassette - Mini</string>
    <string name="artist_multiple">Artists (one per line)</string>
    <string name="artists">Artists</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="author">Author</string>
    <string name="biography">Biography</string>
    <string name="biography_unavailable">Couldn\u2019t find a biography entry for this artist.</string>
    <string name="black_theme_name">AMOLED Black</string>
    <string name="blacklist">Blacklist</string>
    <string name="bug_report_failed">Unable to send report</string>
    <string name="bug_report_failed_invalid_token">Invalid access token. Please contact the app developer.</string>
    <string name="bug_report_failed_issues_not_available">Issues are not enabled for the selected repository. Please contact the app developer.</string>
    <string name="bug_report_failed_unknown">An unexpected error occurred. Please contact the app developer.</string>
    <string name="bug_report_failed_wrong_credentials">Wrong username or password</string>
    <string name="bug_report_issue">Issue</string>
    <string name="bug_report_manual">Send manually</string>
    <string name="bug_report_no_description">Please enter an issue description</string>
    <string name="bug_report_no_password">Please enter your valid GitHub password</string>
    <string name="bug_report_no_title">Please enter an issue title</string>
    <string name="bug_report_no_username">Please enter your valid GitHub username</string>
    <string name="bug_report_uploading">Uploading report to GitHub…</string>
    <string name="bug_report_use_account">Send using GitHub account</string>
    <string name="cancel_current_timer">Cancel current timer</string>
    <string name="changelog">Changelog</string>
    <string name="classic_theme_style_name">Classic</string>
    <string name="clear_action">Clear</string>
    <string name="clear_blacklist">Clear blacklist</string>
    <string name="clear_playlist_title">Clear playlist</string>
    <string name="clear_playlist_x"><![CDATA[Clear the playlist <b>%1$s</b>? This can\u2019t be undone!]]></string>
    <string name="colored_footers">Colored footers</string>
    <string name="confirm_adding_duplicates">Add tracks already in selected playlist?</string>
    <string name="copied_device_info_to_clipboard">Copied device info to clipboard.</string>
    <string name="could_not_create_playlist">Couldn\u2019t create playlist.</string>
    <string name="could_not_download_album_cover">"Couldn\u2019t download a matching album cover."</string>
    <string name="could_not_scan_files">Could not scan %d files.</string>
    <string name="create_action">Create</string>
    <string name="created_playlist_x">Created playlist %1$s.</string>
    <string name="currently_listening_to_x_by_x">Currently listening to %1$s by %2$s.</string>
    <string name="dark_theme_name">Sorta Dark</string>
    <string name="day">Day</string>
    <string name="delete_action">Delete</string>
    <string name="delete_playlist_title">Delete playlist</string>
    <string name="delete_playlist_x"><![CDATA[Delete the playlist <b>%1$s</b>?]]></string>
    <string name="delete_playlists_title">Delete playlists</string>
    <string name="delete_song_title">Delete song</string>
    <string name="delete_song_x"><![CDATA[Delete the song <b>%1$s</b>?]]></string>
    <string name="delete_songs_title">Delete songs</string>
    <string name="delete_x_playlists"><![CDATA[Delete <b>%1$d</b> playlists?]]></string>
    <string name="delete_x_songs"><![CDATA[Delete <b>%1$d</b> songs?]]></string>
    <string name="deleted_x_songs">Deleted %1$d songs.</string>
    <string name="deleting_songs">Deleting songs</string>
    <string name="description">Description</string>
    <string name="device_info">Device info</string>
    <string name="dialog_ringtone_message">Please allow Cassette to modify system settings in the next screen before setting the ringtone.</string>
    <string name="dialog_ringtone_title">Set ringtone</string>
    <string name="disc_number">"Disc Number"</string>
    <string name="do_you_want_to_clear_the_blacklist">Do you want to clear the blacklist?</string>
    <string name="do_you_want_to_remove_from_the_blacklist"><![CDATA[Do you want to remove <b>%1$s</b> from the blacklist?]]></string>
    <string name="download_from_last_fm">Download from Last.fm</string>
    <string name="empty">Empty</string>
    <string name="equalizer">Equalizer</string>
    <string name="error_no_app_for_intent">No application is available to open this page.</string>
    <string name="failed_to_save_playlist">Failed to save playlist (%s).</string>
    <string name="favorites">Favorites</string>
    <string name="finish_current_music_sleep_timer">Finish last song</string>
    <string name="follow_system_theme_black_name">System Theme (AMOLED Black)</string>
    <string name="pref_header_colors">Colors</string>
    <string name="pref_header_labs">Labs (Advanced Features)</string>
    <string name="pref_header_mini_player">Mini Player</string>
    <string name="pref_header_notification">Notification</string>
    <string name="pref_header_widget">Widget</string>
    <string name="pref_summary_accent_colorc">The accent theme color, defaults to blue.</string>
    <string name="pref_summary_circle_progress">Show a circular progress bar on the mini player</string>
    <string name="pref_summary_classic_notification">Use the classic notification design.</string>
    <string name="pref_summary_colored_app_shortcuts">Colors the app shortcuts in the primary color.</string>
    <string name="pref_summary_colored_navigation_bar">Colors the navigation bar in the primary color.</string>
    <string name="pref_summary_colored_notification">"Colors the notification in the album cover\u2019s vibrant color."</string>
    <string name="pref_summary_desaturate">As per Material Design guide lines in dark mode colors should be desaturated</string>
    <string name="pref_summary_empty_queue_action">When the playing queue is empty create a new shuffled queue instead of going to the home screen</string>
    <string name="pref_summary_expand_now_playing_panel">Clicking on the notification will show now playing screen instead of the home screen</string>
    <string name="pref_summary_extra_controls">Add extra controls for mini player</string>
    <string name="pref_summary_headset_playback">Start playing when headphones (wired or wireless) are connected.</string>
    <string name="pref_summary_immersive_mode">Enable immersive mode</string>
    <string name="pref_summary_primary_color">The primary theme color, defaults to red.</string>
    <string name="pref_summary_screen_on">Enabling this feature may affect battery life</string>
    <string name="pref_summary_widget_override">Override the widget background transparency to solid color</string>
    <string name="pref_title_accent_color">Accent Color</string>
    <string name="pref_title_app_shortcuts">Colored App Shortcuts</string>
    <string name="pref_title_circle_progress">Use Circular Progress Bar</string>
    <string name="pref_title_classic_notification">Classic Notification Design</string>
    <string name="pref_title_colored_notification">Colored Notification</string>
    <string name="pref_title_desaturate">Desaturate Colors</string>
    <string name="pref_title_empty_queue_action">Empty Queue</string>
    <string name="pref_title_expand_now_playing_panel">Show Now Playing Screen</string>
    <string name="pref_title_extra_controls">Extra Controls</string>
    <string name="pref_title_headset_playback">Headset Autoplay</string>
    <string name="pref_title_immersive_mode">Immersive Mode</string>
    <string name="pref_title_navigation_bar">Colored Navigation Bar</string>
    <string name="pref_title_primary_color">Primary Color</string>
    <string name="pref_title_screen_on">Keep Screen On</string>
    <string name="pref_title_widget_override">Widget Background Color Override</string>
    <string name="pref_title_widget_style">Use Rounded Widgets</string>
    <string name="reset_discography">Rescan media</string>
</resources>