<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory android:title="@string/pref_header_colors">

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEColorPreference
            app:iconSpaceReserved="false"
            android:key="primary_color"
            android:persistent="false"
            app:allowDividerAbove="false"
            android:summary="@string/pref_summary_primary_color"
            android:title="@string/pref_title_primary_color" />
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEColorPreference
            app:iconSpaceReserved="false"
            android:key="accent_color"
            android:persistent="false"
            app:allowDividerAbove="false"
            android:summary="@string/pref_summary_accent_colorc"
            android:title="@string/pref_title_accent_color" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="desaturate_colors"
            android:persistent="false"
            android:summary="@string/pref_summary_desaturate"
            android:title="@string/pref_title_desaturate" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="should_color_navigation_bar"
            android:persistent="false"
            android:summary="@string/pref_summary_colored_navigation_bar"
            android:title="@string/pref_title_navigation_bar" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="should_color_app_shortcuts"
            android:summary="@string/pref_summary_colored_app_shortcuts"
            android:title="@string/pref_title_app_shortcuts" />

    </com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

</androidx.preference.PreferenceScreen>
