<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory android:title="@string/pref_header_labs">
        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="screen_on"
            android:summary="@string/pref_summary_screen_on"
            android:title="@string/pref_title_screen_on" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="immersive_mode"
            android:summary="@string/pref_summary_immersive_mode"
            android:title="@string/pref_title_immersive_mode" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="headset_playback"
            android:summary="@string/pref_summary_headset_playback"
            android:title="@string/pref_title_headset_playback" />
    </com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>
</androidx.preference.PreferenceScreen>