<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory android:title="@string/pref_header_mini_player">

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="extra_controls"
            android:summary="@string/pref_summary_extra_controls"
            android:title="@string/pref_title_extra_controls" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="circle_progress"
            android:summary="@string/pref_summary_circle_progress"
            android:title="@string/pref_title_circle_progress" />
    </com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>
</androidx.preference.PreferenceScreen>