<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory android:title="@string/pref_header_widget">

    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="widget_style"
            android:title="@string/pref_title_widget_style" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="widget_override"
            android:summary="@string/pref_summary_widget_override"
            android:title="@string/pref_title_widget_override" />
    </com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>
</androidx.preference.PreferenceScreen>